* 2014-02-24 - thorben.betten@open-xchange.com

 - Fix for bug 31264: Added cache invalidator to capabilities caches
 - Fix for bug 31152: Do not throw EmiG-specific error codes, but just mark as non-EmiG capable

* 2014-02-20 - thorben.betten@open-xchange.com

 - Fix for bug 30138: Ensure each probe for root subfolder capability is exclusively performed

* 2014-02-18 - thorben.betten@open-xchange.com

 - Fix for bug 31086: Ignore failed attempt to save non-existent setting

* 2014-02-10 - thorben.betten@open-xchange.com

 - Fix for bug 31039: Perform a move to trash through a RENAME command on associated IMAP folder

* 2014-02-06 - thorben.betten@open-xchange.com

 - Fix for bug 31010: More robust writing of JSON data BLOB to database

* 2014-02-06 - dennis.sieben@open-xchange.com

 - Fix for bug 31003: Empty JSON arrays handed over to this extension now result in an exception

* 2014-02-05 - dennis.sieben@open-xchange.com

 - Fix for bug 30984: registeredServiceImplementations counter must be increased even if the service implementation doesn't require other services

* 2014-02-05 - thorben.betten@open-xchange.com

 - Fix for bug 30977: Only keep MDC map for threads created by Open-Xchange application

* 2014-02-04 - marcus.klein@open-xchange.com

 - Fix for bug 30255: Closing database connections if database pool does not control them anymore.

* 2014-02-04 - dennis.sieben@open-xchange.com

 - SCR1860: added a new mail filter action command for pgp_encrypt extension

* 2014-01-30 - thorben.betten@open-xchange.com

 - Fix for bug 30895: Do not stick to have "image/*" Content-Type, but accept default Content-Type "application/octet-stream", too

* 2014-01-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 30852: Check permissions of all subfolders recursively prior accepting client deletion 

* 2014-01-29 - tobias.friedrich@open-xchange.com
