@@ -1,3 +1,12 @@
+* 2014-02-25 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 31191: Fixed erroneous permission check.
+
+* 2014-02-25 - thorben.betten@open-xchange.com
+
+ - Fix for bug 31252: Put error arguments into "error_params" field for compatibility reasons
+ - Fix for bug 31287: Do not apply black-list on provisioning calls
+
 * 2014-02-24 - thorben.betten@open-xchange.com
 
  - Fix for bug 31264: Added cache invalidator to capabilities caches
